<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Betting POS</string>
    <string name="Betting_POS">Betting POS</string>
    <string name="SignOut">SignOut</string>
    <string name="Paid">Paid</string>
    <string name="Received">Received</string>
    <string name="Count">Count</string>
    <string name="Balance">Balance</string>
    <string name="Amount">Amount</string>
    <string name="Pay">Pay</string>
    <string name="Close">Close</string>
    <string name="Password">Password</string>
    <string name="Verify">Verify</string>
    <string name="Vouchers_Payment">Vouchers Payment</string>
    <string name="Total_Amount">Total Amount</string>
    <string name="Live">Live</string>
    <string name="www_ysecit_com">www.ysecit.com</string>
    <string name="UserID">UserID</string>
    <string name="Sign_In">Sign In</string>
    <string name="Received_amount">Received amount</string>
    <string name="Return_amount">Return amount</string>
    <string name="Search">Search</string>
    <string name="Date">Date</string>
    <string name="BarCode">BarCode</string>
    <string name="Reset">Reset</string>

    <string name="Not_a_Register_User_Please_Contact_Administrator">Not a Register User!Please Contact Administrator</string>
    <string name="System_is_successfully_registered_Please_Login_with_your_EmployeeID_and_Password">System is successfully registered,Please Login with your EmployeeID and Password!</string>
    <string name="Authentication_Problem">Authentication Problem</string>
    <string name="User_name_is_required">User name is required!</string>
    <string name="Alternative_mobile">Alternative mobile</string>
    <string name="mobile_number_is_required">mobile number is required!</string>
    <string name="Recharge_amount_is_required">Recharge amount is required!</string>
    <string name="Paid_amount_should_be_greater_or_equal_to_Total_amount">Paid amount should be greater or equal to Total amount!</string>
    <string name="Paid_amount_should_not_be_empty_and_0">Paid amount should not be empty and 0!</string>
    <string name="Paid_amount_should_not_be_less_then_Total_amount">Paid amount should not be less then Total amount!</string>
    <string name="Are_you_sure_you_want_to_make_recharge">Are you sure you want to make recharge?</string>
    <string name="Reset_Password">Reset Password</string>
    <string name="New_Password">New password</string>
    <string name="Old_Password">Old password</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Password_successfully_changed">Password successfully changed</string>
    <string name="Login_again_with_this_new_password">Login again with this new password!</string>
    <string name="Old_password_is_required">Old password is required!</string>
    <string name="New_password_is_required">New password is required!</string>
    <string name="Confirm_password_is_required">Confirm password is required!</string>
    <string name="New_password_and_confirm_password_should_be_same">New password and confirm password should be same!</string>
    <string name="cancelled">CANCELLED</string>
    <string name="CUSTOMER_SERVICE_NUMBER">CUSTOMER SERVICE NUMBER</string>
    <string name="PDF_Saved_Sucessfully">PDF Saved Successfully</string>
    <string name="Internet_connection">Internet connection</string>
    <string name="Internet_ConnMsg">Please check your internet connection or try again later</string>
    <string name="LoginHD">Login</string>
    <string name="Registration">Registration</string>
    <string name="Please_enter_the_UserID">Please enter the UserID</string>
    <string name="Please_enter_the_PassWord">Please enter the PassWord</string>
    <string name="No_Products_for_this_User_Please_Contact_Admin">No Products for this User, Please Contact Admin!</string>
    <string name="Permission_Granted_Now_you_can_access_device">Permission Granted, Now you can access device</string>
    <string name="Permission_Denied_You_cannot_access_device">Permission Denied, You cannot access device</string>
    <string name="You_need_to_allow_access_to_both_the_permissions">You need to allow access to both the permissions</string>
    <string name="Commissions">Commissions</string>
    <string name="Home_Page">Home</string>
    <string name="account_no">Account No</string>
    <string name="Mac_Address">Mac Address</string>
    <string name="No_Response_from_API">No Response from API</string>

    <string name="EtopUp">Etop Up</string>
    <string name="Denomination">Denomination</string>
    <string name="Create_Voucher">Create Voucher</string>
    <string name="TillBalance">TillBalance</string>
    <string name="Transaction_history">Transaction history</string>
    <string name="PassWordResetHead">Password Reset</string>
    <string name="PassWord_reset_validation">Password reset validation</string>

    <string name="ClientInfoHead">Client Information</string>
    <string name="APINotResponding">No Records</string>
    <string name="MacAddressProbMsg">Problem in fetching IMEI Number, Please contact admin</string>
    <string name="Okay">Okay</string>
    <string name="Cancel">Cancel</string>
    <string name="CancelVoucher"> Cancel Voucher</string>

    <string name="Permission_already_granted">Permission already granted</string>
    <string name="PleaseWait">please wait...</string>
    <string name="AddAmount">Please add any amount!</string>
    <string name="AddTotalAmount">Please add total amount!</string>
    <string name="GamingDate">Gaming Date</string>
    <string name="Are_you_SignOut">Are you sure you want to sign out of Betting POS?!</string>
    <string name="NotActiveGameDate">Not Active,Open Gaming Date"</string>
    <string name="VersionCode">Version Code</string>
    <string name="VersionName">Version Name</string>
    <string name="password_is_required">Password is required!</string>
    <string name="please_register">Please Register your Device!</string>
    <string name="sold">SOLD</string>
    <string name="time">Time</string>
    <string name="total_sold">Total sold</string>
    <string name="mobile">Mobile</string>
    <string name="Recharge">Recharge</string>
    <string name="Status">Status</string>
    <string name="AccountID">AccountID</string>
    <string name="Receipt">Receipt</string>
    <string name="Name">Name</string>
    <string name="Total_Transaction_Count">Total Transaction Count</string>
    <string name="Total_Transaction_Amount">Total Transaction Amount</string>
    <string name="Select_Language">Select Language</string>

    <string name="LanguageHead">Languages</string>
    <string name="Total_sales_Commission">Total Sales Commission</string>
    <string name="Create">CREATE VOUCHER</string>

    <string name="Transaction">TRANSACTION</string>
    <string name="In_the_future">In the future</string>
    <string name="userID_doesnot_exists">UserID does not exists in Main Server</string>
    <string name="please_Contact_admin">Please Contact Administrator</string>
    <string name="error_while_update">Problem while update</string>

    <string name="password_sucessfully_changed">Password successfully changed.</string>
    <string name="login_newpassword">Login again with new password!</string>
    <string name="new_password">New Password: </string>
    <string name="AppUpdateTitle">Application Update</string>
    <string name="update">UPDATE</string>
    <string name="NewVersion">New Version Available</string>
    <string name="pleaseUpdate">Please update to new version to continue use</string>

    <string name="cashout">Cashout</string>
    <string name="onlinepayout">Online Payout</string>
    <string name="comments">Comments</string>
    <string name="paid">Paid</string>
    <string name="value">Value</string>
    <string name="user">User</string>
    <string name="Request_Nr">Request Nr</string>
    <string name="Request_Nr_lenght">Request Nr must be 12 length</string>
    <string name="accountDetails">Account Details requird</string>
    <string name="please_enter_request_number">Please enter request number</string>
    <string name="Type_your_keyword_here">Type request number</string>
    <string name="Currency">Currency</string>
    <string name="Online_WDR_Paid">Online WDR Paid</string>
    <string name="Commssion_sales">Commission Sales</string>

    <string name="Redeemed">Redeemed</string>
    <string name="From">From </string>
    <string name="To"> To </string>
    <string name="collected_amount">Last Collection :</string>

    <string name="BreakUp">Balance</string>

    <string name="openingCredit">Opening Credit</string>
    <string name="totEtopUpSold">Total E-Top Up Sold</string>
    <string name="commissionEtopUp">Commission E-Top Up</string>

    <string name="totECashoutPaid">Cashout Paid Commission</string>
    <string name="commECashout">Commission Cashout</string>
    <string name="actualCredit_closingBalance">Actual Credit (Closing Balance)</string>
    <string name="TotalPaidNonCommission">Paid Non Commission</string>

    <string name="Total_Non_Commission">Cashout Non Commission</string>
    <string name="ID_number">ID Number</string>
    <string name="ID_name">ID Name</string>
    <string name="please_enter_Id_number">Please enter ID Number</string>
    <string name="please_enter_Id_Name">Please enter ID Name</string>

    <string name="card_validation">Card Validation</string>
    <string name="card_number_barcode">Card number / Barcode</string>
    <string name="please_enter_card_number_barcode">please enter card number / barcode</string>
    <string name="customer_name">Customer Name</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>

    // Printout Translation
    <string name="Voucher">Voucher #</string>
    <string name="Till">Till</string>
    <string name="Cashier">Cashier :</string>

    <string name="WDR">WDR</string>
    <string name="PAID">PAID</string>
    <string name="AMOUNT">AMOUNT</string>
    <string name="FirstLetter">Password can not start with "0"</string>

    <string name="pt_title">Playable Tickets</string>
    <string name="pt_sales">Sales</string>
    <string name="pt_commission">Commission</string>

    <string name="pt_sales_generation">Ticket Generation</string>
    <string name="pt_sales_transaction">Sales Transaction</string>
    <string name="todo">TODO</string>
    <string name="playable_ticket">PLAYABLE TICKET</string>
    <string name="number_of_tickets">Number of Tickets</string>
    <string name="no_denomination_found">No Denomination Found</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="cancelled_voucher">CANCELLED VOUCHER</string>
    <string name="please_select_any_voucher">Please Select any voucher</string>

    <string name="TSC_Conn">Printer Connection…</string>
    <string name="Printing">printer is connecting please wait"</string>
    <string name="PrinterHead">Printer Status</string>

    <string name="PrinterHDmsg">please check the printer either connected or not</string>
    <string name="TopUp">Top Up</string>
    <string name="Location">Loc</string>
    <string name="open_barcodes">Open Barcodes</string>
    <string name="topup_transaction_amount">Topup Transaction</string>
    <string name="topup_sales_amount">Topup Sales Commission</string>
    <string name="online_support_number">ONLINE SUPPORT NUMBER</string>

</resources>
