<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:layout_weight="1"
            android:gravity="center|end"
            android:paddingEnd="@dimen/margin_normal"
            android:text="@string/Total_Amount"
            android:textColor="@color/color_black" />

        <TextView
            android:id="@+id/totalAmtTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:layout_weight="1"
            android:gravity="center|end"
            android:inputType="numberDecimal"
            android:paddingEnd="@dimen/margin_normal"
            android:text="0.00"
            android:textColor="@color/color_black"
            android:textFontWeight="1"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_normal"
            android:layout_weight="1"
            android:gravity="center|end"
            android:paddingEnd="@dimen/margin_normal"
            android:text="@string/Received_amount"
            android:textColor="@color/color_black" />

        <EditText
            android:id="@+id/receivedAmtEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center|end"
            android:inputType="numberDecimal"
            android:paddingEnd="@dimen/margin_normal"
            android:text=""
            android:textColor="@color/color_black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_normal"
            android:layout_weight="1"
            android:gravity="center|end"
            android:paddingEnd="@dimen/margin_normal"
            android:text="@string/Return_amount"
            android:textColor="@color/color_black" />

        <TextView
            android:id="@+id/returnAmtTXT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_normal"
            android:layout_weight="1"
            android:gravity="center|end"
            android:inputType="numberDecimal"
            android:paddingEnd="@dimen/margin_normal"
            android:text="0.00"
            android:textColor="@color/color_black"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="241dp"
            tools:layout_editor_absoluteY="58dp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/payBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/CancelbetColor"
            android:text="@string/Pay"
            android:textColor="@color/color_whit" />

        <Button
            android:id="@+id/cancelBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/TabColor"
            android:text="@string/Cancel"
            android:textColor="@color/color_whit" />
    </LinearLayout>
</LinearLayout>