<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingDefaultResource">

    <!--<data>

        <variable
            name="transFrag"
            type="com.suribetpos.main.ui.cashout.TransactionFragment" />
    </data>
-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/NormalTextViewTheme">

        <HorizontalScrollView
            android:id="@+id/retailerScrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <!--Result View-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/fromdateTodate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:paddingLeft="10dp"
                        android:text="@string/Date"
                        android:textColor="@color/edittext_hint"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="right|center"
                        android:paddingRight="10dp"
                        android:text="@string/collected_amount"
                        android:textColor="@color/red"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/LastCollectedAmount"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="left|center"
                        android:paddingLeft="10dp"
                        android:textColor="@color/red"
                        android:textStyle="bold" />
                </LinearLayout>

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_or_edittext_hight_normal"
                    android:background="@color/theme_background"
                    android:clickable="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/textview_or_edittext_hight_normal"
                    android:background="@color/sample_blue"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/etopup_todays_recipt"
                        android:layout_width="@dimen/textview_or_edittext_width_normal"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center" />

                    <TextView
                        android:layout_width="@dimen/printingminsize"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/comments"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="@dimen/textview_or_edittext_width_barcode"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/value"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="@dimen/textview_or_edittext_width_barcode"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/user"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="@dimen/textview_or_edittext_width_barcode"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/time"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="62dp"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/primary"
                        android:orientation="horizontal">

                        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                            android:id="@+id/activity_main_swipe_refresh_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/transactionRecylcerView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@color/theme_background"></androidx.recyclerview.widget.RecyclerView>
                        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

                        <TextView
                            android:id="@+id/cashout_todays_empty"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/APINotResponding"
                            android:textColor="@color/color_whit"
                            android:visibility="gone" />

                    </FrameLayout>
                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/primary_heding"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/textview_or_edittext_hight_normal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center"
                    android:paddingRight="10dp"
                    android:text="@string/Total_Transaction_Count" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:background="@color/login_background" />

                <TextView
                    android:id="@+id/cashout_todays_count"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:paddingRight="5dp"
                    android:textColor="@color/color_whit" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="right"
                android:background="@color/login_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/textview_or_edittext_hight_normal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="right|center"

                    android:paddingRight="10dp"
                    android:text="@string/Total_Transaction_Amount" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="left"
                    android:background="@color/login_background" />

                <TextView
                    android:id="@+id/cashout_todays_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:paddingRight="5dp"
                    android:textColor="@color/color_whit" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/pdfviewerLAYOUT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:visibility="gone">

            <include layout="@layout/bill_cashout" />
        </LinearLayout>
    </FrameLayout>
</layout>